--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/White-BG.png" alt="">
+        <img src="assets/img/logo.png" alt="">
         <h1 class="sitename"><span>Maternal Health Initiatives
           For Mothers</span></h1>
       </a>
